--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="row gy-4">
       <!-- Footer About (Now col-lg-4 -> col-lg-4 remains) -->
       <div class="col-lg-4 col-md-6 footer-about">
-     
+
         <div class="footer-contact pt-3">
           <p>Rue du Lac Windermere</p>
           <p>1053 Les Berges du Lac 2, Tunisie</p>
@@ -12,36 +12,26 @@
           <p><strong>Email:</strong> <span>contact&#64;sises-tunisie.com</span></p>
         </div>
 
-        <div class="social-links d-flex mt-4">
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-        </div>
       </div>
 
       <!-- Useful Links (col-lg-2 -> col-lg-4) -->
       <div class="col-lg-4 col-md-6 footer-links">
-        <h4>Useful Links</h4>
+        <h4 class="section-title">Liens utiles</h4>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Terms of service</a></li>
-          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#about">About us</a></li>
+          <li><a href="#services">Services</a></li>
         </ul>
       </div>
 
       <!-- Our Services (col-lg-2 -> col-lg-4) -->
       <div class="col-lg-4 col-md-6 footer-links">
-        <h4>Our Services</h4>
-        <ul>
-          <li><a href="#">Web Design</a></li>
-          <li><a href="#">Web Development</a></li>
-          <li><a href="#">Product Management</a></li>
-          <li><a href="#">Marketing</a></li>
-          <li><a href="#">Graphic Design</a></li>
-        </ul>
+        <h4 class="section-title">Réseaux sociaux</h4>
+
+        <div class="social-links d-flex mt-4">
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+        </div>
       </div>
     </div>
   </div>
